--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         </activity>
         <activity android:name=".auth.RegisterActivity" />
         <activity android:name=".auth.ProfileActivity"/>
+        <activity android:name=".MainActivity"/>
     </application>
 
 </manifest>
