--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".auth.RegisterActivity" />
         <activity android:name=".auth.ProfileActivity"/>
         <activity android:name=".MainActivity"/>
+        <activity android:name=".auth.CreateItemActivity"/>
     </application>
 
 </manifest>
