feat: add ItemActivity class

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".auth.ProfileActivity"/>
         <activity android:name=".MainActivity"/>
         <activity android:name=".auth.CreateItemActivity"/>
+        <activity android:name=".auth.ItemActivity"/>
     </application>
 
 </manifest>
