--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".MainActivity"/>
         <activity android:name=".CreateItemActivity"/>
         <activity android:name=".ItemActivity"/>
+        <activity android:name=".SettingsActivity"/>
     </application>
 
 </manifest>
