--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -17,7 +19,7 @@
         tools:targetApi="n" >
 
         <activity
-            android:name=".auth.LoginActivity"
+            android:name=".ProfileActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +28,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".auth.RegisterActivity" />
-        <activity android:name=".ProfileActivity"/>
+<!--        <activity android:name=".ProfileActivity"/>-->
         <activity android:name=".MainActivity"/>
         <activity android:name=".CreateItemActivity"/>
         <activity android:name=".ItemActivity"/>
