--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,19 +21,21 @@
 
         <activity
             android:name=".auth.LoginActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".auth.RegisterActivity" />
         <activity android:name=".ProfileActivity"/>
         <activity android:name=".MainActivity"/>
         <activity android:name=".items.CreateItemActivity"/>
         <activity android:name=".items.ItemActivity"/>
         <activity android:name=".SettingsActivity"/>
+        <activity android:name=".SliderActivity"/>
     </application>
 
 </manifest>
